--- a/client/src/components/CourseTable/CourseTable.css
+++ b/client/src/components/CourseTable/CourseTable.css
@@ -1,11 +1,24 @@
-.AuthorTable{
+.CourseTable{
    
 }
-.AuthorTable table{
-   width: 70%;
+.CourseTable table{
    margin-top: 30px;
+   border-bottom: 1px solid;
 }
-.AuthorTable tr > td.actions{
+.CourseTable table thead tr th{
+   border: 1px solid;
+   border-bottom: 0px solid;
+}
+.CourseTable table tbody tr td{
+   border: 1px solid;
+   border-bottom: 0px solid;
+}
+.CourseTable table tbody tr td:nth-child(1),
+.CourseTable table tbody tr td:nth-child(2),
+.CourseTable table tbody tr td:nth-child(3){
+   border-top: 0px solid;
+}
+.CourseTable tr > td.actions{
    vertical-align: middle;
 }
 
