--- a/client/src/components/CourseTableStudent/CourseTableStudent.css
+++ b/client/src/components/CourseTableStudent/CourseTableStudent.css
@@ -22,3 +22,12 @@
    vertical-align: middle;
 }
 
+.CourseTableStudent  button.blue-btn{
+   background-color: rgb(34, 34, 239);
+   color: white;
+}
+.CourseTableStudent  button.red-btn{
+   background-color: rgb(182, 182, 70);
+   color: white;
+}
+
